apply plugin: 'java'

archivesBaseName = rootProject.archivesBaseName
version = rootProject.version
group = rootProject.group

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

repositories {
    mavenCentral()
}

var lwjgl_version = '3.3.1'

dependencies {

    implementation rootProject.sourceSets.main.output
    testImplementation rootProject.sourceSets.test.output
//    shade project(":")

    var lwjgl_modules_no_natives = [
//         "lwjgl-jawt",
//         "lwjgl-egl",
//         "lwjgl-opencl",
    ]

    var lwjgl_modules = [
            "lwjgl",
//         "lwjgl-assimp",
            "lwjgl-glfw",
//         "lwjgl-jemalloc",
//         "lwjgl-lmdb",
//         "lwjgl-nanovg",
//         "lwjgl-nfd",
//         "lwjgl-nuklear",
//         "lwjgl-openal",
            "lwjgl-opengl",
//            "lwjgl-opengles",
//         "lwjgl-par",
//         "lwjgl-sse",
            "lwjgl-stb",
//         "lwjgl-tinyfd",
//            "lwjgl-xxhash"
    ]

    for (module in lwjgl_modules) {
        implementation "org.lwjgl:${module}:${lwjgl_version}"
        implementation "org.lwjgl:${module}:${lwjgl_version}:natives-windows"
        implementation "org.lwjgl:${module}:${lwjgl_version}:natives-linux"
        implementation "org.lwjgl:${module}:${lwjgl_version}:natives-macos"
    }

    for (module in lwjgl_modules_no_natives) {
        implementation "org.lwjgl:${module}:${lwjgl_version}"
    }

//    implementation "org.lwjglx:lwjgl3-awt:0.1.8"

    // jetbrains annotations
    implementation "org.jetbrains:annotations:20.1.0"

    // gson
    implementation "com.google.code.gson:gson:2.8.5"
}

compileJava {
    options.release.set(17)
}